--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ form.d-flex input {
     align-self: center;
     background-color: hsla(232, 49%, 51%, 0.6);
     max-width: 100%;
+    margin: auto;
     
 
 }
@@ -92,7 +93,7 @@ footer{
     align-items:center;
     padding: 20px;
     background-color: hsla(232, 49%, 51%, 0.805);
-    margin-right: 12px;
+    
 }
 
 .redes{
