--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 
 .banner{
     display: flex;
-    justify-content: space-around;
-    padding:50px;
+    justify-content: center;
+    padding:30px;
     background-color: rgba(0, 0, 0, 0.1);
     max-width: 100%;
     font-family: "Helvetica Neue",Helvetica,Arial;
@@ -11,29 +11,50 @@
 
 }
 
-.l-icon img{
-    
+.l-icon { 
     display: flex;
-    
+    padding-top: 5px;
 }
 
 .navbar{
     background-color: hsla(230, 80%, 12%,0.9);
-    
 }
 
 .navbar-nav{
     font-size: 120%;
     display: flex;
     justify-content: space-between;
-    
 }
 
+
+.nav-link.active{
+background-color: rgba(132, 132, 131, 0.2);
+color: aliceblue !important;
+} 
+
+a.nav-link{
+    color:white;
+}
+.navbar-toggler{
+    background-color:rgb(202, 214, 214,0.5) !important;
+}
+
+button.navbar-toggler{
+    border:1px solid;
+    border-color: rgb(82, 84, 84) !important;
+}
+
+
+.controles{
+    display:flex;
+    justify-content:space-between;
+    align-items: center;
+    background-color: hsla(232, 49%, 51%, 0.6);
+}
 
 .card{
     display: inline-flex;
     flex-wrap: wrap;
-    
 }
 
 .card img{
@@ -41,45 +62,40 @@
     padding: 5px;
 }
 
-.nav-link.active{
-background-color: rgba(132, 132, 131, 0.2);
-
-} 
-
-a.nav-link{
-    color:white;
+.card-body a{
+    background: rgba(70, 68, 70, 0.2);
 }
-
-.controles{
-    display:flex;
-    justify-content:space-between;
-    align-items: center;
-    background-color: hsla(232, 49%, 51%, 0.6);
-
-}
-
-
-
-
-
 
 .caja-form{
     display: flex;
     max-width: 100%;
     align-items: center;
     justify-content: center;
+    background-color: hsla(232, 49%, 51%, 0.6);
+    
 }
 .form-contact{
-    width: 50%;
-    height: 50%;
-    margin: 30px;
-    padding:20px;
-    background-color: hsla(232, 49%, 51%, 0.6);
-    border: solid;
-    font-size:20px;
+    
+    width: 40rem;
+    height: 23rem;
+    margin: 20px;
+    padding-top:15px;
+    background-color: rgba(248, 246, 249, 0.5);
+    border:solid;
+    border-color: rgb(8, 8, 8,0.2);
+    border-radius: 5px;
+    font-size:18px;
     
 }
 
+.form-contact form button{
+    background-color:rgba(70, 68, 70, 0.2);
+}
+
+.form-floating{
+    font-size:15px;
+    color: rgb(6, 6, 6,0.4);
+}
 
 .events.row.container{
     display: container;
